# backtest-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
api/: __init__.py  app.py  config.py
api/models/: __init__.py  schemas.py
api/routes/: __init__.py  backtest.py  strategies.py
backtest/: __init__.py
backtest/core/: __init__.py  engine.py  event_handler.py  order.py  performance.py  portfolio.py  position.py
backtest/data/: __init__.py  loader.py  preprocessor.py  provider.py
backtest/metrics/: __init__.py  performance.py  returns.py  risk.py
backtest/models/: __init__.py  backtest_run.py  balance.py  decision_action.py  financial_entities.py  market_data.py  order.py  orders.py  portfolio.py  position.py  spot_order.py  strategy.py  trading_rules.py  transaction.py
backtest/repositories/: __init__.py  balance_repository.py  base.py  context.py  entity_repositories.py  market_data_repository.py  order_repositories.py  order_repository.py  portfolio_repository.py  position_repository.py  setup_helpers.py  spot_order_repository.py  transaction_repository.py
backtest/strategies/: __init__.py  base.py  momentum.py  moving_average.py
backtest/utils/: __init__.py  helpers.py  validators.py
backtest/visualization/: __init__.py  plots.py  reports.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  analyze.py  run.py
docs/: IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  NEW_MODELS.md  api_reference.md  examples.md  getting_started.md  order_execution.md  trading_rules_guide.md
examples/: basic_backtest.py  brazilian_market_backtest.ipynb  brazilian_market_backtest.py  custom_strategy.py  new_models_demo.py  simple_strategy.py  spot_order_lifecycle.py  transaction_balance_system.py
scripts/: download_data.py
tests/: README.md  __init__.py  conftest.py
tests/test_core/: __init__.py  test_engine.py  test_portfolio.py
tests/test_metrics/: __init__.py  test_returns.py
tests/test_models/: test_balance.py  test_spot_order.py  test_transaction.py
tests/test_repositories/: test_balance_repository.py  (+1 more)
(+2 files in other folders)
